Move jstemplates into their own partial.

--- a/app/templates/partials/header.ejs
+++ b/app/templates/partials/header.ejs
@@ -9,16 +9,6 @@
 		<meta name="keywords" content="" />
 		<meta name="description" content="" />
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-
-		<meta property="og:site_name" content=""/>
-		<meta property="og:title" content=""/>
-		<meta property="og:description" content=""/>
-		<meta property="og:url" content=""/>
-		<meta property="og:image" content=""/>
-		<meta property="og:type" content="website"/>
-		<meta property="og:locale" content="en_US" />
-
 		<title></title>
 
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -30,8 +20,7 @@
 		</script>
 		<link rel="stylesheet" href="stylesheets/app/print.css" media="print" />
 
-		<script type="text/template" id="example_backbone_template">
-			Test Template
-		</script>
+		<%- partial('partials/jstemplates') %>
+
 	</head>
 	<body>
