--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -1,2 +1,2 @@
 <h1><%= title %></h1>
-<p>Welcome to <%= title %></p>
+<p>This is an EJS template that was passed the 'title' value of: <%= title %></p>
