Organize templates a bit more.

--- a/app/templates/partials/header.ejs
+++ b/app/templates/partials/header.ejs
@@ -11,14 +11,14 @@
 
 		<title></title>
 
-		<link rel="shortcut icon" href="images/favicon.ico" />
+		<link rel="shortcut icon" href="/images/favicon.ico" />
 
-		<link rel="stylesheet" href="stylesheets/reset.css" media="screen" />
-		<link rel="stylesheet" href="stylesheets/app/app.css" media="screen" />
+		<link rel="stylesheet" href="/stylesheets/reset.css" media="screen" />
+		<link rel="stylesheet" href="/stylesheets/app/app.css" media="screen" />
 		<script>
-			document.write('<link rel="stylesheet" href="stylesheets/app/javascript.css" media="screen" />');
+			document.write('<link rel="stylesheet" href="/stylesheets/app/javascript.css" media="screen" />');
 		</script>
-		<link rel="stylesheet" href="stylesheets/app/print.css" media="print" />
+		<link rel="stylesheet" href="/stylesheets/app/print.css" media="print" />
 
 		<%- partial('partials/jstemplates') %>
 
