--- a/app/templates/partials/footer.ejs
+++ b/app/templates/partials/footer.ejs
@@ -1,21 +1,21 @@
-		<script src="javascripts/lib/LAB-debug.min.js"></script>
+
+		<script src="/javascripts/lib/LAB-debug.min.js"></script>
 		<script>
 			$LAB
 				// Libraries
-				.script('javascripts/lib/jquery-1.7.1.js').wait()
-				.script('javascripts/lib/underscore.js').wait()
-				.script('javascripts/lib/backbone.js').wait()
+				.script('/javascripts/lib/jquery-1.7.1.js').wait()
+				.script('/javascripts/lib/underscore.js').wait()
+				.script('/javascripts/lib/backbone.js').wait()
 				// Plugins
-				.script('javascripts/plugins/jquery.easing.1.3.js').wait()
+				.script('/javascripts/plugins/jquery.easing.1.3.js').wait()
 				// Backbone - Controllers
-				.script('javascripts/app/controller/AppRouter.js')
+				.script('/javascripts/app/controller/AppRouter.js')
 				// Backbone - Models
 				// Backbone - Views
-				.script('javascripts/app/view/IndexView.js')
+				.script('/javascripts/app/view/IndexView.js')
 				// Site-Specific JS - Global
-				.script('javascripts/app/app.utilities.js').wait()
-				.script('javascripts/app/app.global.js').wait(function() {
-					window.isDebugMode = true;
+				.script('/javascripts/app/app.utilities.js').wait()
+				.script('/javascripts/app/app.global.js').wait(function() {
 					App.Global.init();
 				});
 		</script>
